welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
	for (n<-0 to h)
^